2008-02-29  Øyvind Kolås  <pippin@o-hand.com>

	Reuse the numeric id's used for picking actors to avoid the potential
	of overflowing the id numbers when continusly creating and destroying
	actors on long running applications for 16bpp.

	* clutter/clutter-private.h: replaced hashtable with GArray and a
	GSList for available slots in the array.
	* clutter/clutter-actor.c: (create_actor_id): function to create an
	actor->id mapping, (release_actor_id): function to mark an existing id
	as available for reuse.
	* clutter/clutter-main.c: (clutter_context_free): added utility
	function for cleaning up the context, 
	(clutter_get_actor_by_gid): use the GArray for looking up actors.

2008-02-26  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-alpha.c:
	(clutter_exp_inc_func),	(clutter_exp_dec_func): Clamp the value
	of the alpha function between [0, MAX_ALPHA]. (#800)

2008-02-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c (emit_event): Fix the last commit
	which inverted a condition.

2008-02-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Remove the usage of g_return_if_fail()
	from static functions: either assert or use g_warning() to check
	internal state, as g_return_if_fail() can be compiled out.

	* clutter/clutter-main.c: Ditto as above.

2008-02-25  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-texture.c:
	(texture_update_data):
	Set alignment based on actual data rowstride, not the texture
	width.

2008-02-21  Tomas Frydrych  <tf@openedhand.com>

	* clutter/x11/clutter-backend-x11.h:
	* clutter/x11/clutter-event-x11.c:
	* clutter/x11/clutter-x11.h:
	(clutter_x11_handle_event):
	(clutter_x11_disable_event_retrieval):
	Functions to allow to hook into external XEvent retrieval (for
	example when using clutter with gtk); NB: this API is tentative.

2008-02-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/x11/clutter-event-x11.c (event_translate): Ignore